web-admin/api/k3s/catascan-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catascan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catascan-api
  template:
    metadata:
      labels:
        app: catascan-api
    spec:
      containers:
        - name: catascan-api
          image: localhost:5000/catascan-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /management/health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /management/health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
