web-admin/api/k3s/catascan-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catascan-api-service
  labels:
    app: catascan-api
spec:
  selector:
    app: catascan-api
  ports:
    - name: http
      protocol: TCP
      port: 8080       
      targetPort: 8080
  type: ClusterIP
