web-admin/api/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catascan-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
spec:
  ingressClassName: nginx 
  tls:
    - hosts:
        - localhost       # 퍼블릭 주소로 변경
      secretName: catascan-api-tls       # Cert하고 키 담긴 tls-secret
  rules:
    - host: localhost      # 퍼블릭 주소로 변경
      http:
        paths:
          # 1. Spring Boot App
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catascan-api-service
                port:
                  number: 80

          # 2. Grafana
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000

          # 3. Prometheus
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
